2006-03-04 Anatoly Sokolov <aesok@post.ru>

	* common/macros.inc (X_lpm): Add. (Contributed by Dmitry Xmelkov.)
	(LOAD_X_CONST, LPM_R0_ZP): Delete.
	* libc/pmstring/memcpy_P.S: Use X_lpm.
	* libc/pmstring/strcasecmp_P.S: (Ditto.).
	* libc/pmstring/strcat_P.S: (Ditto.).
	* libc/pmstring/strcmp_P.S: (Ditto.).
	* libc/pmstring/strcpy_P.S: (Ditto.).
	* libc/pmstring/strlcat_P.S: (Ditto.).
	* libc/pmstring/strlcpy_P.S: (Ditto.).
	* libc/pmstring/strlen_P.S: (Ditto.).
	* libc/pmstring/strncasecmp_P.S: (Ditto.).
	* libc/pmstring/strncat_P.S: (Ditto.).
	* libc/pmstring/strncmp_P.S: (Ditto.).
	* libc/pmstring/strncpy_P.S: (Ditto.).
	* libc/pmstring/strnlen_P.S: (Ditto.).
	* libc/pmstring/strstr_P.S: (Ditto.).

2006-03-02 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Fix example source code.

2006-02-28 Anatoly Sokolov <aesok@post.ru>

	* include/avr/io.h: Define __AVR_HAVE_LPMX__.
	* common/macros.inc: Define __AVR_HAVE_LPMX__.
	(LPM_R0_ZP): Use __AVR_HAVE_LPMX__.
	* include/avr/pgmspace.h: Use __AVR_HAVE_LPMX__.
	* libm/fplib/fplib.inc(mLPMRdZpp): Use __AVR_HAVE_LPMX__.

2006-02-26 Anatoly Sokolov <aesok@post.ru>

	* include/avr/io.h: Define __AVR_HAVE_MOVW__.
	* common/macros.inc: Define __AVR_HAVE_MOVW__.
	(X_movw):  Use __AVR_HAVE_MOVW__.
	* include/avr/eeprom.h (eeprom_write_word): Use __AVR_HAVE_MOVW__.

2006-02-07 Anatoly Sokolov <aesok@post.ru>

	* libm/fplib/dtostrf.S: Use X_movw when possible. 
	Use RCALL instead XCALL for calling 'pow' and 'ldexp' functions.

2006-02-02 Anatoly Sokolov <aesok@post.ru>

	* include/avr/signal.h: Include <avr/interrupt.h> file.
	[Fixed bug #15574]

2006-02-02 Anatoly Sokolov <aesok@post.ru>

	* include/avr/boot.h: Corrected a choice __boot_xxx macros.
	[Fixed bug #15559]

2006-01-31 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotnx4.h (GPIOR0): Rename from GPI0R0.
	* include/avr/iotnx5.h (GPIOR0): (Ditto.).
	* include/avr/iotnx61.h (GPIOR0): (Ditto.).
	[Fixed bug #15595]

2006-01-30 Anatoly Sokolov <aesok@post.ru>
